--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
+    <section class="top-header">
+        <div class="half-width food-info">
+            <h1>
+                <span>Skip</span> The Diet,<br>
+                Just Eat Healthy
+                With Food Network
+            </h1>
+            <p>Imagine you don't need a diet because we break provide <br>
+                healthy and delicious food for you!</p>
+            <br><br>
+            <a href="www.nahidjc.xyz" target="_blank" class="button">Order Food</a>
+        </div>
+        <div class="half-width">
 
+            <img src="images/Group 8425.png" alt="" srcset="">
+        </div>
+    </section>
 </body>
 
 </html>
