about section completed

--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
             <img src="images/Group 8425.png" alt="" srcset="">
         </div>
     </section>
+    <section class="about">
+        <div class=" about-img">
+
+            <img src="images/Person Image.png">
+        </div>
+        <div class="about-me">
+            <h1>About Me</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At assumenda repudiandae ipsum, animi fugiat
+                beatae fugit mollitia et atque neque nobis vitae reprehenderit debitis ipsam voluptates adipisci
+                quisquam quod exercitationem natus blanditiis. Debitis sapiente eius in esse et tempore delectus!</p>
+            <br>
+            <a href="#" class="button">Contact Me</a>
+        </div>
+    </section>
 </body>
 
 </html>
