reciepe and media portion adding

--- a/index.html
+++ b/index.html
@@ -41,6 +41,56 @@
             <a href="#" class="button">Contact Me</a>
         </div>
     </section>
+    <div class="recipie">
+        <div class="text-box">
+            <h1>My Recipies</h1>
+            <p>Whisk together lime juice Unsure of the quantity needed? Click on the underlined ingredient to reveal the
+                quantity. No need to flip back and forth! OK, GOT IT</p>
+        </div>
+        <div class="food-box">
+            <div class="third-width">
+                <img src="images/Project Cover1.jpg">
+                <div class="recipie-description">
+                    <h2>Recipie Title</h2>
+                    <p>Whisk together lime juice Unsure of the quantity needed? Click on the underlined ingredient to
+                        reveal the quantity. No need to flip back and forth! OK, GOT IT</p>
+                </div>
+
+            </div>
+            <div class="third-width">
+                <img src="images/Project Cover.jpg">
+                <div class="recipie-description">
+                    <h2>Recipie Title</h2>
+                    <p>Whisk together lime juice Unsure of the quantity needed? Click on the underlined ingredient to
+                        reveal the quantity. No need to flip back and forth! OK, GOT IT</p>
+                </div>
+            </div>
+            <div class="third-width">
+                <img src="images/Project Cover5.png">
+                <div class="recipie-description">
+                    <h2>Recipie Title</h2>
+                    <p>Whisk together lime juice Unsure of the quantity needed? Click on the underlined ingredient to
+                        reveal the quantity. No need to flip back and forth! OK, GOT IT</p>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="social-media">
+        <div class="media-common">
+            <h2>700K</h2>
+            <p>Youtube Subscriber</p>
+        </div>
+        <div class="media-common">
+            <h2>2.4M</h2>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="media-common">
+            <h2>200K</h2>
+            <p>Dribble Short Likes</p>
+        </div>
+    </div>
 </body>
 
 </html>
