--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="social-media">
         <div class="media-common">
             <h2>700K</h2>
-            <p>Youtube Subscriber</p>
+            <p>Youtube Subscribers</p>
         </div>
         <div class="media-common">
             <h2>2.4M</h2>
@@ -91,6 +91,12 @@
             <p>Dribble Short Likes</p>
         </div>
     </div>
+    <footer>
+        <h2>
+            <span>FOOD</span> NETWORK
+        </h2>
+        <p>Eat healthy to live healthy.Live healthy to live happy.</p>
+    </footer>
 </body>
 
 </html>
