--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 
 <body>
-    <section class="top-header">
+    <nav>
+        <ul>
+            <div class="nav-middle">
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#Order">Order Food</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Recipie">Recipie</a></li>
+            </div>
+        </ul>
+    </nav>
+    <section class="top-header" id="Order">
         <div class="half-width food-info">
             <h1>
                 <span>Skip</span> The Diet,<br>
@@ -27,7 +37,7 @@
             <img src="images/Group 8425.png" alt="" srcset="">
         </div>
     </section>
-    <section class="about">
+    <section class="about" id="About">
         <div class=" about-img">
 
             <img src="images/Person Image.png">
@@ -41,7 +51,7 @@
             <a href="#" class="button">Contact Me</a>
         </div>
     </section>
-    <div class="recipie">
+    <div class="recipie" id="Recipie">
         <div class="text-box">
             <h1>My Recipies</h1>
             <p>Whisk together lime juice Unsure of the quantity needed? Click on the underlined ingredient to reveal the
