--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="#" class="button">Contact Me</a>
         </div>
     </section>
-    <div class="recipie" id="Recipie">
+    <section class="recipie" id="Recipie">
         <div class="text-box">
             <h1>My Recipies</h1>
             <p>Whisk together lime juice Unsure of the quantity needed? Click on the underlined ingredient to reveal the
@@ -84,7 +84,7 @@
         </div>
 
 
-    </div>
+    </section>
     <div class="social-media">
         <div class="media-common">
             <h2>700K</h2>
